# tokio-osinterval

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
benches/: precision.rs
examples/: cron.rs  heartbeat.rs
src/: interval.rs  lib.rs
src/periodic/: bsd.rs  linux.rs  mod.rs
src/sys/: bsd.rs  fallback.rs  linux.rs  mod.rs  windows.rs
tests/: basic.rs  parity.rs  periodic.rs
